[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
dependencies = [
  "torch==2.0.1+cu117",
  "torchvision==0.15.2+cu117",
  "timm==0.6.12",
  "scipy==1.10.1",
  "easydict==1.13",
  "pydantic==2.7.4",
  "pyyaml==6.0.1",
  "wandb==0.17.0",
  "gdown==5.2.0",
  "pandas==2.0.3",
  "matplotlib==3.7.5",
  "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/backbone", "src/models"]

[tool.rye]
virtual = false
managed = true

dev-dependencies = [
  "pytest>=8.3.2",
  "mypy>=1.11.1",
  "ruff>=0.5.7",
  "ipython>=8.12.3",
  "jupyter>=1.1.1",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"

[tool.rye.scripts]
"lint:ruff" = "ruff check src"
"lint:ruff:fix" = "ruff check --fix src"
"lint:mypy" = "mypy src"
"format:ruff" = "ruff format src"
lint = { chain = ["lint:ruff", "lint:mypy"] }
format = { chain = ["format:ruff", "lint:ruff:fix"] }
test = "pytest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 119
indent-width = 4
# include files: ["*.py", "*.pyi", "**/pyproject.toml] https://docs.astral.sh/ruff/settings/#include
# exclude files: [".venv", "dist", ...] https://docs.astral.sh/ruff/settings/#exclude

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-line-length = "dynamic"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

# https://docs.astral.sh/ruff/rules/
ignore = [
  "F401",
  "W293",
  "E111",
  "E114",
  "E402",
  "E501",
  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  # Use ternary operator {contents} instead of if-else-block
  "SIM108",
  # Combine if branches using logical or operator
  "SIM114",
  # Use `key in dict` instead of `key in dict.keys()`
  "SIM118",
]

[tool.ruff.lint.flake8-annotations]
# Whether to suppress ANN401 for dynamically typed *args and **kwargs arguments.
allow-star-arg-any = true

[tool.ruff.lint.flake8-implicit-str-concat]
# Whether to allow implicit string concatenations for multiline strings. By default, implicit concatenations of multiline strings are allowed (but continuation lines, delimited with a backslash, are prohibited).
allow-multiline = false

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["/.venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = ["--ignore=.venv"]
